# garudust-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.th.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  claude-pr-review.yml  claude.yml  release.yml  sync-labels.yml
crates/garudust-agent/: Cargo.toml
crates/garudust-agent/src/: agent.rs  approver.rs  compressor.rs  lib.rs  prompt_builder.rs  tests.rs
crates/garudust-core/: Cargo.toml
crates/garudust-core/src/: budget.rs  config.rs  error.rs  lib.rs  memory.rs  net_guard.rs  platform.rs  tool.rs  transport.rs  types.rs
crates/garudust-cron/: Cargo.toml
crates/garudust-cron/src/: lib.rs  scheduler.rs
crates/garudust-gateway/: Cargo.toml
crates/garudust-gateway/src/: handler.rs  lib.rs  router.rs  sessions.rs  state.rs
crates/garudust-memory/: Cargo.toml
crates/garudust-memory/src/: file_store.rs  lib.rs  migrations.rs  session_db.rs
crates/garudust-platforms/: Cargo.toml
crates/garudust-platforms/src/: discord.rs  lib.rs  line.rs  matrix.rs  slack.rs  telegram.rs  webhook.rs
crates/garudust-tools/: Cargo.toml
crates/garudust-tools/src/: lib.rs  registry.rs  security.rs
crates/garudust-tools/src/toolsets/: browser.rs  files.rs  mcp.rs  memory.rs  mod.rs  search.rs  skills.rs  terminal.rs  web.rs
crates/garudust-transport/: Cargo.toml
crates/garudust-transport/src/: anthropic.rs  bedrock.rs  chat_completions.rs  codex.rs  lib.rs  registry.rs  retry.rs
docs/: index.html
docs/i18n/th/: README.md
docs/i18n/zh/: README.md
tools/make-cast/: Cargo.toml
tools/make-cast/src/: main.rs
