[package]
name    = "garudust-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
dirs        = "5"
