[package]
name    = "garudust-gateway"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
garudust-core      = { path = "../garudust-core" }
garudust-agent     = { path = "../garudust-agent" }
garudust-memory    = { path = "../garudust-memory" }
async-trait        = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tokio-stream       = { workspace = true }
tracing            = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
futures            = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
arc-swap           = { workspace = true }

[dev-dependencies]
tower              = { version = "0.5", features = ["util"] }
http-body-util     = "0.1"
garudust-tools     = { path = "../garudust-tools" }
uuid               = { workspace = true }
