[package]
name    = "garudust-platforms"
version = { workspace = true }
edition = { workspace = true }

[features]
default  = ["telegram", "webhook"]
telegram = ["dep:teloxide"]
discord  = ["dep:serenity"]
webhook  = ["dep:axum"]
slack    = ["dep:tokio-tungstenite"]
matrix   = ["dep:matrix-sdk"]
all      = ["telegram", "discord", "webhook", "slack", "matrix"]

[dependencies]
garudust-core  = { path = "../garudust-core" }
garudust-agent = { path = "../garudust-agent" }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
futures        = { workspace = true }
reqwest        = { workspace = true }
axum              = { workspace = true, optional = true }
teloxide          = { workspace = true, optional = true }
serenity          = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
matrix-sdk        = { workspace = true, optional = true }
