[package]
name    = "garudust-tools"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
garudust-core   = { path = "../garudust-core" }
garudust-memory = { path = "../garudust-memory" }
async-trait     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
reqwest         = { workspace = true }
futures         = { workspace = true }
serde_yaml      = { workspace = true }
