[package]
name    = "garudust-transport"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
garudust-core = { path = "../garudust-core" }
async-trait   = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
futures       = { workspace = true }
async-stream  = { workspace = true }
chrono        = { workspace = true }
